mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/tuple.sol
contract C layout at (1, 2, 3) {}
// ----
// TypeError 1763: (21-30): The base slot of the storage layout must evaluate to an integer.
